@@ -1,4 +1,4 @@
-%Error-UNSUPPORTED: t/t_lib_prot_inout_bad.v:9:28: Unsupported: protect-lib port direction: INOUT
+%Error-UNSUPPORTED: t/t_lib_prot_inout_bad.v:9:28: Unsupported: --lib-create port direction: INOUT
     9 |                     inout  z,
       |                            ^
                     ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
